--- a/src/hbs/modal-film-card.hbs
+++ b/src/hbs/modal-film-card.hbs
@@ -62,10 +62,10 @@
     </p>
   </div>
   <div class="modal-film__btn-grup">
-              <button class="modal-film__btn" type="button">
+              <button class="modal-film__btn" type="button" id="add_to_watched">
                 ADD TO WATCHED
               </button>
-              <button class="modal-film__btn" type="button">
+              <button class="modal-film__btn" type="button" id="add_to_queue">
                 ADD TO QUEUE
               </button>
             </div>
