--- a/src/hbs/modal-film-card.hbs
+++ b/src/hbs/modal-film-card.hbs
@@ -32,10 +32,10 @@
     <div class="modal-film__film-data-generate-block">
       <ul class='modal-film__film-data-generate-list'>
         <li class='modal-film__film-data-generate-elem'>
-          <p><span class="modal-film__generat-data accient"> {{vote_average}}</span> / <span class="modal-film__generat-data accient"> {{vote_count}} </span></p>
+          <p><span class="modal-film__generat-data accient"> {{vote_average}}</span> / <span class="modal-film__generat-data accient-g"> {{vote_count}} </span></p>
         </li>
         <li class='modal-film__film-data-generate-elem'>
-          <p><span class="modal-film__generat-data accient"> {{popularity}}</span></p>
+          <p><span class="modal-film__generat-data accient-g"> {{popularity}}</span></p>
         </li>
         <li class='modal-film__film-data-generate-elem'>
           <p><span class="modal-film__generat-data"> {{original_title}}</span></p>
@@ -55,12 +55,3 @@
       {{overview}}
     </p>
   </div>
- <!-- <div class="modal-film__btn-grup">
-              <button class="modal-film__btn" type="button">
-                ADD TO WATCHED
-              </button>
-              <button class="modal-film__btn" type="button">
-                ADD TO QUEUE
-              </button>
-            </div>
-</div> -->
