--- a/src/sass/_film-modal.scss
+++ b/src/sass/_film-modal.scss
@@ -60,6 +60,7 @@
     height: 30px;
     background: transparent;
     border: none;
+    cursor: pointer;
 }
 .btn-modal-close__svg {
     width: 14px;
@@ -231,6 +232,20 @@
     display: flex;
     flex-direction: row;
 }
+@media screen and (min-width: 768px) {
+    .modal-film__btn-grup {
+        position: absolute;
+        bottom: 40px;
+        right: 72px;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .modal-film__btn-grup {
+        bottom: 111px;
+        right: 108px;
+    }
+}
 .modal-film__btn {
     width: 110px;
     height: 44px;
@@ -243,6 +258,7 @@
     letter-spacing: 0em;
     text-align: center;
     background: rgba(255, 255, 255, 1);
+    cursor: pointer;
     &:hover,
     &:focus {
         background: rgba(255, 107, 1, 1);
@@ -266,13 +282,16 @@
 .accient { 
     padding-right: 3px;
     padding-left: 3px;
-    background: rgba(247, 247, 247, 1);
+    background: rgba(255, 107, 1, 1);
     border-radius: 10%;
-    &:hover {
-      background: rgba(255, 107, 1, 1); 
-      color: white;
-
-    }
+ 
+ 
+}
+.accient-g {
+    padding-right: 3px;
+    padding-left: 3px;
+     background: rgba(247, 247, 247, 1);
+    border-radius: 10%;
 }
 
 .is-hidden {
